Modal fot mobile z-index fix

--- a/src/components/OrderPanel/OrderListMain/CloseDayOneInfoModal/CloseDayOneInfoModal.scss
+++ b/src/components/OrderPanel/OrderListMain/CloseDayOneInfoModal/CloseDayOneInfoModal.scss
@@ -5,7 +5,7 @@
   top: 20%;
   left: 10%;
   width: 80%;
-  z-index: 500;
+  z-index: 600;
   background-color: white;
   border: 1px solid #ccc;
   box-shadow: 1px 1px 1px black;
