--- a/src/components/ThematicArea/SingleModuleDetails/SingleModuleDetails.scss
+++ b/src/components/ThematicArea/SingleModuleDetails/SingleModuleDetails.scss
@@ -40,7 +40,7 @@ $size: 32px;
     top: 20%;
     left: 10%;
     min-width: 80%;
-    z-index: 500;
+    z-index: 511;
     background-color: white;
     border: 1px solid #ccc;
     box-shadow: 1px 1px 1px black;
