--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -8,7 +8,7 @@
 .modal {
   &__help {
     position: fixed;
-    z-index: 500;
+    z-index: 511;
     background-color: white;
     border: 1px solid #ccc;
     box-shadow: 1px 1px 1px black;
@@ -21,7 +21,7 @@
     top: 20%;
     left: 10%;
     width: 80%;
-    z-index: 500;
+    z-index: 511;
     background-color: white;
     border: 1px solid #ccc;
     box-shadow: 1px 1px 1px black;
@@ -40,7 +40,7 @@
     top: 20%;
     left: 10%;
     width: 80%;
-    z-index: 500;
+    z-index: 511;
     background-color: white;
     border: 1px solid #ccc;
     box-shadow: 1px 1px 1px black;
